Maven run tests from command line #162